--- a/index.html
+++ b/index.html
@@ -380,10 +380,10 @@
       <div class="container">
         <h2 class="section-title">Контакты</h2>
         <div class="contacts-grid">
-          <a href="https://t.me/твой_ник" target="_blank" class="contact-card">
+          <a href="https://t.me/jmclinty" target="_blank" class="contact-card">
             <div class="contact-icon telegram">📱</div>
             <h3 class="contact-label">Telegram</h3>
-            <p class="contact-value">@твой_ник</p>
+            <p class="contact-value">@jmclinty</p>
           </a>
           <a
             href="https://github.com/hellstumy"
