--- a/index.html
+++ b/index.html
@@ -47,22 +47,17 @@
     <!-- About Section -->
     <section id="about" class="section about-section">
       <div class="container">
-        <h2 class="section-title">Обо мне</h2>
+        <h2 class="section-title">About me</h2>
         <div class="about-card">
           <div class="about-text">
             <p>
-              Привет! Я Frontend-разработчик с фокусом на создание качественных
-              пользовательских интерфейсов. Работаю с современными технологиями:
-              HTML, CSS, JavaScript и React.
+              Hi! I’m a Frontend Developer focused on building high-quality user interfaces. I work with modern technologies: HTML, CSS, JavaScript, and React.
             </p>
             <p>
-              Стремлюсь к написанию чистого, читаемого кода и созданию
-              интуитивно понятных интерфейсов. Каждый проект — это возможность
-              применить лучшие практики и изучить что-то новое.
+              I strive to write clean, readable code and create intuitive interfaces. Every project is an opportunity to apply best practices and learn something new.
             </p>
             <p>
-              Особое внимание уделяю качественному UI, адаптивности и
-              производительности приложений.
+              I pay special attention to high-quality UI, responsiveness, and application performance.
             </p>
           </div>
           <div class="tech-grid">
@@ -90,13 +85,13 @@
     <!-- Projects Section -->
     <section id="projects" class="section projects-section">
       <div class="container">
-        <h2 class="section-title">Проекты</h2>
+        <h2 class="section-title">Projects</h2>
 
         <!-- Landing Pages -->
         <div class="project-group">
           <h3 class="group-title">
             <span class="group-number">1</span>
-            Лендинги
+            Landings
           </h3>
           <div class="projects-grid">
             <div class="project-card">
@@ -182,7 +177,7 @@
         <div class="project-group">
           <h3 class="group-title">
             <span class="group-number purple">2</span>
-            Многостраничный сайт
+            Multi-page site
           </h3>
           <div class="multipage-project">
             <div class="project-card large">
@@ -226,7 +221,7 @@
         <div class="project-group">
           <h3 class="group-title">
             <span class="group-number cyan">3</span>
-            Пет-проекты
+            Pet Projects
           </h3>
           <div class="projects-grid">
             <div class="project-card">
@@ -311,7 +306,7 @@
         <div class="project-group">
           <h3 class="group-title">
             <span class="group-number green">4</span>
-            Большой проект
+            Large Project
           </h3>
           <div class="featured-project">
             <div class="featured-content">
@@ -413,7 +408,7 @@
           target="_blank"
           class="footer-link"
         >
-          Исходники портфолио →
+          Link →
         </a>
       </div>
     </footer>
