--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
           <button class="nav-link" data-section="about">about</button>
           <button class="nav-link" data-section="projects">projects</button>
           <button class="nav-link" data-section="skills">skills</button>
-          <button class="nav-link" data-section="contacts">контакты</button>
+          <button class="nav-link" data-section="contacts">contacts</button>
         </div>
       </div>
     </nav>
@@ -35,7 +35,7 @@
         <p class="hero-subtitle">Frontend Developer — HTML, CSS, JS, React</p>
         <div class="hero-buttons">
           <button class="btn btn-primary" data-section="projects">
-            Посмотреть проекты
+            View projects
           </button>
           <button class="btn btn-secondary" data-section="contacts">
             Контакты
