--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                   <span class="tech-tag">JavaScript</span>
                 </div>
                 <div class="project-buttons">
-                  <button class="btn btn-primary btn-small">Live Demo</button>
+                  <a href="https://hellstumy.github.io/Soft-Point/" class="btn btn-primary btn-small">Live Demo</a>
                   <button class="btn btn-outline btn-small">GitHub</button>
                 </div>
               </div>
