--- a/index.html
+++ b/index.html
@@ -103,10 +103,9 @@
               </div>
               <div class="project-info">
                 <span class="project-category">Landing Page</span>
-                <h4 class="project-title">Business Landing</h4>
+                <h4 class="project-title">Soft Point</h4>
                 <p class="project-description">
-                  Одностраничный сайт для бизнеса с современной анимацией и
-                  адаптивной версткой
+                  Soft Point is a modern landing page for a software solution designed to simplify and enhance your digital life. The site highlights key features such as easy setup, user-friendly interface, robust security, and clean code. Visitors can explore pricing plans, discover the benefits of the product, and easily download the application. With a sleek design and smooth animations, Soft Point aims to attract users looking for innovative and reliable software tools.
                 </p>
                 <div class="project-tech">
                   <span class="tech-tag">HTML</span>
@@ -115,7 +114,7 @@
                 </div>
                 <div class="project-buttons">
                   <a href="https://hellstumy.github.io/Soft-Point/" class="btn btn-primary btn-small">Live Demo</a>
-                  <button class="btn btn-outline btn-small">GitHub</button>
+                  <a href="https://github.com/hellstumy/Soft-Point" class="btn btn-outline btn-small">GitHub</a>
                 </div>
               </div>
             </div>
