--- a/index.html
+++ b/index.html
@@ -153,9 +153,9 @@
               </div>
               <div class="project-info">
                 <span class="project-category">Landing Page</span>
-                <h4 class="project-title">Product Landing</h4>
+                <h4 class="project-title">Coming soon...</h4>
                 <p class="project-description">
-                  Промо-страница продукта с фокусом на конверсию и UX
+                  Coming soon...
                 </p>
                 <div class="project-tech">
                   <span class="tech-tag">HTML</span>
