--- a/index.html
+++ b/index.html
@@ -282,18 +282,18 @@
               </div>
               <div class="project-info">
                 <span class="project-category cyan">Pet Project</span>
-                <h4 class="project-title">Weather App</h4>
+                <h4 class="project-title">Absolute Cinema<h4>
                 <p class="project-description">
-                  Погодное приложение с API интеграцией и геолокацией
+                  This is a movie-themed website created by following a video tutorial. I do not consider it a full-fledged project since it was made entirely based on the tutorial. The main tools and technologies used are React, Skeleton, and Redux.
                 </p>
                 <div class="project-tech">
                   <span class="tech-tag">React</span>
                   <span class="tech-tag">API</span>
-                  <span class="tech-tag">CSS</span>
+                  <span class="tech-tag">Redux</span>
                 </div>
                 <div class="project-buttons">
-                  <button class="btn btn-primary btn-small">Live Demo</button>
-                  <button class="btn btn-outline btn-small">GitHub</button>
+                  <a href="https://absolute-cinema-omega.vercel.app/" class="btn btn-primary btn-small">Live Demo</a>
+                  <a href="https://github.com/hellstumy/Absolute-Cinema" class="btn btn-outline btn-small">GitHub</a>
                 </div>
               </div>
             </div>
@@ -414,3 +414,4 @@
     <script src="script.js"></script>
   </body>
 </html>
+
