--- a/index.html
+++ b/index.html
@@ -153,9 +153,9 @@
               </div>
               <div class="project-info">
                 <span class="project-category">Landing Page</span>
-                <h4 class="project-title">Coming soon...</h4>
+                <h4 class="project-title">Spoon</h4>
                 <p class="project-description">
-                  Coming soon...
+                  Promoting your business and services with Propel: A responsive, multi-page business template with everything you need propel your business.
                 </p>
                 <div class="project-tech">
                   <span class="tech-tag">HTML</span>
@@ -163,8 +163,8 @@
                   <span class="tech-tag">JavaScript</span>
                 </div>
                 <div class="project-buttons">
-                  <button class="btn btn-primary btn-small">Live Demo</button>
-                  <button class="btn btn-outline btn-small">GitHub</button>
+                   <a href="https://hellstumy.github.io/Spoon/" class="btn btn-primary btn-small">Live Demo</a>
+                  <a href="https://github.com/hellstumy/Spoon" class="btn btn-outline btn-small">GitHub</a>
                 </div>
               </div>
             </div>
@@ -358,7 +358,7 @@
           </div>
           <div class="skill-card">
             <div class="skill-icon">⚛️</div>
-            <h3 class="skill-name">React (Hooks, компоненты)</h3>
+            <h3 class="skill-name">React (Hooks, Components)</h3>
           </div>
           <div class="skill-card">
             <div class="skill-icon">📁</div>
@@ -371,12 +371,12 @@
     <!-- Contacts Section -->
     <section id="contacts" class="section contacts-section">
       <div class="container">
-        <h2 class="section-title">Контакты</h2>
+        <h2 class="section-title">Contact me</h2>
         <div class="contacts-grid">
-          <a href="https://t.me/jmclinty" target="_blank" class="contact-card">
+          <a href="https://www.linkedin.com/in/mclinty/" target="_blank" class="contact-card">
             <div class="contact-icon telegram">📱</div>
-            <h3 class="contact-label">Telegram</h3>
-            <p class="contact-value">@jmclinty</p>
+            <h3 class="contact-label">LinkedIn</h3>
+            <p class="contact-value">@mclinty</p>
           </a>
           <a
             href="https://github.com/hellstumy"
@@ -414,4 +414,5 @@
     <script src="script.js"></script>
   </body>
 </html>
+
 
