--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+а<!doctype html>
 <html lang="ru">
   <head>
     <meta charset="UTF-8" />
@@ -38,7 +38,7 @@
             View projects
           </button>
           <button class="btn btn-secondary" data-section="contacts">
-            Контакты
+            Contact me
           </button>
         </div>
       </div>
@@ -413,6 +413,7 @@
     <script src="script.js"></script>
   </body>
 </html>
+
 
 
 
