--- a/index.html
+++ b/index.html
@@ -188,8 +188,7 @@
                 <span class="project-category purple">Multi-page Site</span>
                 <h4 class="project-title">Corporate Website</h4>
                 <p class="project-description">
-                  Многостраничный корпоративный сайт с навигацией, CMS и
-                  динамическим контентом
+                  Multi-page corporate website with navigation (non relative)
                 </p>
                 <div class="project-tech">
                   <span class="tech-tag">React</span>
@@ -197,18 +196,17 @@
                   <span class="tech-tag">JavaScript</span>
                 </div>
                 <div class="project-buttons">
-                  <button class="btn btn-primary">Live Demo</button>
-                  <button class="btn btn-outline">GitHub</button>
+                  <a href='https://discounts-on-services-alpha.vercel.app/' class="btn btn-primary">Live Demo</a>
+                  <a href='https://github.com/hellstumy/DiscountsOnServices' class="btn btn-outline">GitHub</a>
                 </div>
               </div>
             </div>
             <div class="features-card">
               <h4>Особенности</h4>
               <ul class="features-list">
-                <li>Многостраничная навигация</li>
-                <li>Динамическое содержимое</li>
-                <li>Адаптивный дизайн</li>
-                <li>SEO оптимизация</li>
+                <li>Multipage</li>
+                <li>Login Button</li>
+                <li>SEO</li>
               </ul>
             </div>
           </div>
@@ -412,6 +410,7 @@
     <script src="script.js"></script>
   </body>
 </html>
+
 
 
 
