--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
               </div>
             </div>
             <div class="features-card">
-              <h4>Особенности</h4>
+              <h4>Features</h4>
               <ul class="features-list">
                 <li>Multipage</li>
                 <li>Login Button</li>
@@ -410,6 +410,7 @@
     <script src="script.js"></script>
   </body>
 </html>
+
 
 
 
