--- a/index.html
+++ b/index.html
@@ -228,19 +228,19 @@
               </div>
               <div class="project-info">
                 <span class="project-category cyan">Pet Project</span>
-                <h4 class="project-title">ToDo App</h4>
+                <h4 class="project-title">Fristailo</h4>
                 <p class="project-description">
-                  Приложение для управления задачами с localStorage и
-                  фильтрацией
+                  Fristailo is a custom React music player that loads tracks via API.
+                  It features track switching, playback controls
                 </p>
                 <div class="project-tech">
                   <span class="tech-tag">React</span>
-                  <span class="tech-tag">CSS</span>
-                  <span class="tech-tag">JavaScript</span>
+                  <span class="tech-tag">API</span>
+                  <span class="tech-tag">HTML/CSS</span>
                 </div>
                 <div class="project-buttons">
-                  <button class="btn btn-primary btn-small">Live Demo</button>
-                  <button class="btn btn-outline btn-small">GitHub</button>
+                  <a href=https://fristailo.vercel.app/" class="btn btn-primary btn-small">Live Demo</a>
+                  <a href="https://github.com/hellstumy/Fristailo" class="btn btn-outline btn-small">GitHub</a>
                 </div>
               </div>
             </div>
@@ -254,9 +254,9 @@
               </div>
               <div class="project-info">
                 <span class="project-category cyan">Pet Project</span>
-                <h4 class="project-title">Calculator</h4>
+                <h4 class="project-title">Coming soon...</h4>
                 <p class="project-description">
-                  Калькулятор с поддержкой основных математических операций
+                  Coming soon...
                 </p>
                 <div class="project-tech">
                   <span class="tech-tag">JavaScript</span>
@@ -410,6 +410,7 @@
     <script src="script.js"></script>
   </body>
 </html>
+
 
 
 
