--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
                   <span class="tech-tag">HTML/CSS</span>
                 </div>
                 <div class="project-buttons">
-                  <a href=https://fristailo.vercel.app/" class="btn btn-primary btn-small">Live Demo</a>
+                  <a href="https://fristailo.vercel.app/" class="btn btn-primary btn-small">Live Demo</a>
                   <a href="https://github.com/hellstumy/Fristailo" class="btn btn-outline btn-small">GitHub</a>
                 </div>
               </div>
@@ -410,6 +410,7 @@
     <script src="script.js"></script>
   </body>
 </html>
+
 
 
 
