--- a/index.html
+++ b/index.html
@@ -254,18 +254,19 @@
               </div>
               <div class="project-info">
                 <span class="project-category cyan">Pet Project</span>
-                <h4 class="project-title">Coming soon...</h4>
+                <h4 class="project-title">WeatherApp</h4>
                 <p class="project-description">
-                  Coming soon...
+                  A minimalist weather application built with React.
+Users can enter a city name to get the current temperature, weather description, humidity, and wind speed. The data is fetched from the OpenWeather API.
                 </p>
                 <div class="project-tech">
-                  <span class="tech-tag">JavaScript</span>
-                  <span class="tech-tag">CSS</span>
-                  <span class="tech-tag">HTML</span>
+                  <span class="tech-tag">React</span>
+                  <span class="tech-tag">WeatherAPI</span>
+                  <span class="tech-tag">HTML/CSS</span>
                 </div>
                 <div class="project-buttons">
-                  <button class="btn btn-primary btn-small">Live Demo</button>
-                  <button class="btn btn-outline btn-small">GitHub</button>
+                   <a href="https://weather-app-brown-sigma-71.vercel.app" class="btn btn-primary btn-small">Live Demo</a>
+                  <a href=https://github.com/hellstumy/WeatherApp" class="btn btn-outline btn-small">GitHub</a>
                 </div>
               </div>
             </div>
@@ -410,6 +411,7 @@
     <script src="script.js"></script>
   </body>
 </html>
+
 
 
 
