--- a/index.html
+++ b/index.html
@@ -314,7 +314,8 @@ Users can enter a city name to get the current temperature, weather description,
                   Bunker is an online multiplayer game inspired by the popular tabletop game “The Bunker.”
 Players find themselves in a post-apocalyptic world where they must discuss, argue, and vote who deserves to enter the bunker and survive.
 The game runs in real time and synchronizes all players through WebSockets.
-
+                  <br/>
+                  <br/>
                   🚀 Features
 
 🔹 Create and join rooms via unique codes
@@ -326,7 +327,8 @@ The game runs in real time and synchronizes all players through WebSockets.
 🔹 In-game chat and event handling using Socket.IO
 
 🔹 Responsive interface with smooth transitions
-
+                    <br/>
+                  <br/>
                   The backend architecture was initially designed with AI assistance, which helped structure the project and speed up development.
 However, the core logic, API integration, and frontend implementation were built manually by me.
 AI was used only as a supportive tool for generating boilerplate and improving existing code — similar to how developers use modern assistants like GitHub Copilot or ChatGPT today.
@@ -334,7 +336,7 @@ AI was used only as a supportive tool for generating boilerplate and improving e
                 <div class="project-tech">
                   <span class="tech-tag green">React (Vite)</span>
                   <span class="tech-tag green">REST API</span>
-                  <span class="tech-tag green">SEO</span>
+                  <span class="tech-tag green">SPA</span>
                   <span class="tech-tag green">Node.js</span>
                   
                   
@@ -429,6 +431,7 @@ AI was used only as a supportive tool for generating boilerplate and improving e
     <script src="script.js"></script>
   </body>
 </html>
+
 
 
 
