--- a/index.html
+++ b/index.html
@@ -318,13 +318,13 @@ The game runs in real time and synchronizes all players through WebSockets.
                   <br/>
                   🚀 Features
 
-🔹 Create and join rooms via unique codes
+🔹 Create and join rooms via unique codes <br/>
 
-🔹 Real-time state synchronization between players
+🔹 Real-time state synchronization between players <br/>
 
-🔹 Voting and hidden player attributes system
+🔹 Voting and hidden player attributes system <br/>
 
-🔹 In-game chat and event handling using Socket.IO
+🔹 In-game chat and event handling using Socket.IO <br/>
 
 🔹 Responsive interface with smooth transitions
                     <br/>
@@ -431,6 +431,7 @@ AI was used only as a supportive tool for generating boilerplate and improving e
     <script src="script.js"></script>
   </body>
 </html>
+
 
 
 
