--- a/index.html
+++ b/index.html
@@ -338,6 +338,7 @@ AI was used only as a supportive tool for generating boilerplate and improving e
                   <span class="tech-tag green">REST API</span>
                   <span class="tech-tag green">SPA</span>
                   <span class="tech-tag green">Node.js</span>
+                  <span class="tech-tag green">Zustand</span>
                   
                   
                 </div>
@@ -431,6 +432,7 @@ AI was used only as a supportive tool for generating boilerplate and improving e
     <script src="script.js"></script>
   </body>
 </html>
+
 
 
 
